# kanshi

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  diesel.toml  screen.sh
migrations/2024-09-19-162838_create_messages/: up.sql
src/: main.rs
src/commands/: mod.rs
src/event/: mod.rs
src/log/: mod.rs
src/persistence/: mod.rs  models.rs  schema.rs
src/tests/: mod.rs
src/util/: discord.rs  mod.rs
