[package]
name = "kanshi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
ctrlc = "3.4.5"
diesel = { version = "2.2.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["colored"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
log = "0.4.22"
poise = "0.6.1"
r2d2 = "0.8.10"
regex = "1.10.6"
semver = "1.0.23"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "signal"] }
